feat: rework E2E tests with container networking and 8 new test scenarios